# halolake

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.host.yml  docker-compose.pull.sub2api.yml  docker-compose.pull.yml  rustfmt.toml
.github/workflows/: docker.yml
apps/control-api/: Cargo.toml  build.rs
apps/control-api/src/: admin_extras.rs  api_catalog.rs  api_channel.rs  api_system.rs  api_usage.rs  api_user.rs  api_web.rs  auth_import.rs  billing.rs  bootstrap_credentials.rs  catalog.rs  channel_affinity.rs  channel_feedback.rs  channel_http.rs  channel_ops.rs  channel_probe.rs  channel_special.rs  channel_task.rs  checkin.rs  codex_auth_import.rs  compat.rs  config.rs  http_auth.rs  http_response.rs  lib.rs  main.rs  model_sync.rs  options_util.rs  playground.rs  prefill.rs  process_metrics.rs  proxy.rs  proxy_probe.rs  ratio_sync.rs  security.rs  session.rs  snapshot_publish.rs  storage.rs  store_open.rs  sub2api_data_import.rs  (+2 more)
apps/control-api/src/control_api_ext/: auth_import.rs  codex_auth_import.rs  http.rs  mod.rs  openai_oauth.rs  sub2api_data_import.rs
apps/control-api/src/storage/: mod.rs
apps/gateway-monoio/: Cargo.toml
apps/gateway-monoio/src/: config.rs  context.rs  control.rs  gateway.rs  image.rs  lib.rs  main.rs  relay.rs  request.rs  response.rs  services.rs  upstream_proxy.rs  util.rs
apps/gateway-monoio/src/downstream/: app.rs  connection.rs  core.rs  mod.rs
crates/api-contract/: Cargo.toml
crates/api-contract/src/: claude.rs  gemini.rs  lib.rs  openai.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: channel_feedback.rs  context.rs  lib.rs  management.rs  memory.rs  snapshot.rs  usage.rs
crates/control-storage/: Cargo.toml
crates/control-storage/src/: lib.rs  management.rs  options.rs  usage.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: claude_openai.rs  gemini_openai.rs  lib.rs
crates/router-core/: Cargo.toml
crates/router-core/benches/: routing.rs
crates/router-core/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docker/: entrypoint.sh
docs/: AUTH_FILE_PORT_CN.md  AUTH_IMPORT.md  CHANNEL_GROUP_COMPAT_CN.md  CONTROL_API_MODULES_CN.md  CONTROL_API_WEB_REVIEW_CN.md  DEPLOY.md  FIRST_DEMO_CN.md  GATEWAY_ARCHITECTURE_CN.md  NEW_API_BACKEND_PORT_CN.md  RUST_GATEWAY_DESIGN_CN.md
examples/: control-api-mysql.toml  control-api-postgres.toml  control-api-sqlite.toml  control-api.toml  gateway-control.toml  gateway.toml
examples/docker/: control-api.toml  gateway.toml
scripts/: delete_all.sh  first-demo.sh  set-group-channel-models.sh  test-group-channels.sh  test_all.sh
scripts/perf/: compare-backends.mjs  llm-load.mjs  mock-upstream.mjs
web/new-api/: README.md
web/new-api/classic/: rsbuild.config.ts
web/new-api/classic/src/components/layout/headerbar/: LanguageSelector.jsx
web/new-api/classic/src/components/settings/: CustomOAuthSetting.jsx
web/new-api/default/src/: routeTree.gen.ts
web/new-api/default/src/components/: command-menu.tsx  config-drawer.tsx  drawer-layout.ts  language-switcher.tsx  model-group-selector.tsx  notification-popover.tsx  profile-dropdown.tsx  search.tsx  theme-switch.tsx
web/new-api/default/src/components/ai-elements/: prompt-input.tsx
web/new-api/default/src/components/data-table/core/: data-table-view.tsx
web/new-api/default/src/components/data-table/layout/: card-grid.tsx  data-table-page.tsx
web/new-api/default/src/components/data-table/toolbar/: bulk-actions.tsx  toolbar.tsx  view-mode-toggle.tsx  view-options.tsx
web/new-api/default/src/components/layout/: constants.ts
web/new-api/default/src/components/layout/components/: footer.tsx  header.tsx  nav-group.tsx  public-header.tsx  public-layout.tsx  section-page-layout.tsx  sidebar-view-header.tsx
web/new-api/default/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  hover-card.tsx  input-otp.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  titled-card.tsx  toggle.tsx  tooltip.tsx
web/new-api/default/src/features/auth/: auth-layout.tsx
web/new-api/default/src/features/auth/components/: oauth-callback-screen.tsx
web/new-api/default/src/features/auth/forgot-password/: index.tsx
web/new-api/default/src/features/auth/otp/: index.tsx
web/new-api/default/src/features/auth/reset-password-confirm/: index.tsx
web/new-api/default/src/features/auth/sign-in/: index.tsx
web/new-api/default/src/features/auth/sign-up/: index.tsx
web/new-api/default/src/features/channels/: api.ts  index.tsx  types.ts
web/new-api/default/src/features/channels/components/: channel-card.tsx  channels-columns.tsx  channels-primary-buttons.tsx  channels-table.tsx  data-table-bulk-actions.tsx
web/new-api/default/src/features/channels/lib/: channel-actions.ts  channel-form.ts  channel-type-config.ts  channel-utils.ts
web/new-api/default/src/features/home/components/: feature-item.tsx  gateway-card.tsx  icon-card.tsx  stat-item.tsx
web/new-api/default/src/features/keys/: api.ts  index.tsx
web/new-api/default/src/features/models/: index.tsx
web/new-api/default/src/features/proxies/: api.ts  constants.ts  index.tsx  types.ts
web/new-api/default/src/features/system-info/: types.ts
web/new-api/default/src/features/usage-logs/: index.tsx
web/new-api/default/src/features/users/: types.ts
web/new-api/default/src/features/wallet/: index.tsx
web/new-api/default/src/hooks/: use-sidebar-config.ts  use-sidebar-data.ts
web/new-api/default/src/i18n/locales/: en.json  fr.json  ja.json  ru.json  vi.json  zh-TW.json  zh.json
web/new-api/default/src/lib/: motion.ts
web/new-api/default/src/styles/: index.css  theme.css
(+48 files in other folders)
