[package]
name = "halolake-control-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
halolake-api-contract = { workspace = true }
halolake-control-plane = { workspace = true }
halolake-domain = { workspace = true }
halolake-router-core = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
bcrypt = { workspace = true }
clap = { workspace = true }
certain-map = { workspace = true }
data-encoding = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-async = { workspace = true }
sha1 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
webauthn-rs = { workspace = true }
