[package]
name = "halolake-control-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
halolake-api-contract = { workspace = true }
halolake-control-plane = { workspace = true }
halolake-control-storage = { workspace = true }
halolake-domain = { workspace = true }
halolake-router-core = { workspace = true }
halolake-telemetry = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
bcrypt = { workspace = true }
clap = { workspace = true }
certain-map = { workspace = true }
data-encoding = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-async = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
webauthn-rs = { workspace = true }
mimalloc = { workspace = true }

# Module surface partitioning (see docs/CONTROL_API_MODULES_CN.md).
# Default keeps full new-api frontend compatibility (including stubs).
[features]
default = ["core", "admin-extras", "compat-stubs"]
# Always-on product core: auth, users/tokens/channels, options, logs, gateway internal.
core = []
# Optional admin tooling beyond the proxy management core.
admin-extras = []
# Routes that only exist so the copied new-api web does not 404
# (payment / OAuth / subscription / deployment / empty content pages).
compat-stubs = []

