[package]
name = "halolake-gateway-monoio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
halolake-api-contract = { workspace = true }
halolake-control-plane = { workspace = true }
halolake-domain = { workspace = true }
halolake-protocol = { workspace = true }
halolake-router-core = { workspace = true }
halolake-telemetry = { workspace = true }

anyhow = { workspace = true }
arc-swap = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
data-encoding = { workspace = true }
certain-map = { workspace = true }
clap = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
monoio = { workspace = true }
monoio-http = { workspace = true }
monoio-native-tls = { workspace = true }
native-tls = "0.2"
monoio-transports = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
serde = { workspace = true }
serde_json = { workspace = true }
service-async = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
mimalloc = { workspace = true }
