[package]
name = "halolake-control-plane"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
halolake-domain = { workspace = true }
halolake-router-core = { workspace = true }

bcrypt = { workspace = true }
certain-map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service-async = { workspace = true }
thiserror = { workspace = true }
